    families.)
  * Add HasFixity class, to go with Pretty class.  Get precedence to
    mostly work.
  * Add Davis-Putnam and some Herbrand support.
  * askolemize should not specialize, only skolemize removes quantifiers.
  * Fix bad implementation of atomic method in PropositionalFormula for
    Data.Logic.Types.FirstOrder type.

 -- David Fox <dsf@seereason.com>  Tue, 17 Jan 2012 21:00:28 -0800

haskell-logic-classes (1.3) unstable; urgency=low

  * Clean up the superclasses

 -- David Fox <dsf@seereason.com>  Fri, 13 Jan 2012 08:45:55 -0800

haskell-logic-classes (1.2) unstable; urgency=low

  * Add a Pretty class to pretty print formulas and friends.

 -- David Fox <dsf@seereason.com>  Tue, 10 Jan 2012 06:28:40 -0800

haskell-logic-classes (1.1) unstable; urgency=low

  * Use the Formula class to abstract out the two different types of Atom
    functionality (with and without equality.)

 -- David Fox <dsf@seereason.com>  Mon, 09 Jan 2012 10:45:09 -0800

haskell-logic-classes (1.0.2) unstable; urgency=low

  * Two important fixes in the old version of simpcnf.

 -- David Fox <dsf@seereason.com>  Fri, 06 Jan 2012 05:37:12 -0800

haskell-logic-classes (1.0.1) unstable; urgency=low

  * Fixes for ghc 7.4.

 -- David Fox <dsf@seereason.com>  Tue, 03 Jan 2012 12:43:44 -0800

haskell-logic-classes (1.0.0) unstable; urgency=low

  * Rewrite.

 -- David Fox <dsf@seereason.com>  Wed, 21 Dec 2011 09:12:48 -0800

haskell-logic-classes (0.49) unstable; urgency=low

  * Fix a bug in the unification algorithm.  Unification should fail if
    we try to unify a variable with itself.

 -- David Fox <dsf@seereason.com>  Mon, 05 Dec 2011 17:02:49 -0800

haskell-logic-classes (0.48) unstable; urgency=low

  * Add missing test modules.

 -- David Fox <dsf@seereason.com>  Sun, 04 Dec 2011 18:29:25 -0800

haskell-logic-classes (0.47) unstable; urgency=low

  * Move some orphan ProofResult instances here from ontology.y
